Se imprentan las funciones recuperarInt y recuperarFloat

--- a/utilitarios/Saludo.html
+++ b/utilitarios/Saludo.html
@@ -8,6 +8,10 @@
         <input type="text" id="txt"/>
         <h3> Ingrese su apellido</h3>
         <input type="text" id="txtA"/>
+        <h3> Ingrese su Edad</h3>
+        <input type="text" id="txtE"/>
+        <h3> Ingrese su Estatura </h3>
+        <input type="text" id="txtES"/>
         <input type="button" value="SALUDAR" onclick="saludar();"/>
     </body>
 </html>
