Se agregó imagen que cambia según el promedio

--- a/Promedio Notas/Promedio Notas.html
+++ b/Promedio Notas/Promedio Notas.html
@@ -19,6 +19,7 @@
         <h3 id="promedio"> Promedio:</h3>
 
        <h3 id="noticia"> - - - - -</h3>
+        <img src="pregunta.gif" width="100px" id="img"/>
             
         <p>
             <input type="button" value="CALCULAR PROMEDIO" onclick="calcularPromedioNotas();"/>
