Se creo la función obtener provincia y funciona correctamente

--- a/Placas/placas.html
+++ b/Placas/placas.html
@@ -33,7 +33,8 @@
                 </div>
             </div>
             <div class="areaResultado">
-                <div class="resultado" id="lblValidacion"></div>
+                <div class="resultado" id="lblValidacion"> - - -</div>
+                <div class="resultado" id="lblProvincia"> - - - </div>
             </div>
         </div>
     </div>
