--- a/Placas/placas.html
+++ b/Placas/placas.html
@@ -32,9 +32,12 @@
                     <input type="button" value="VALIDAR" class="estiloBoton" onclick="validarPlaca();">
                 </div>
             </div>
-            <div class="areaResultado">
-                <div class="resultado" id="lblValidacion"> - - -</div>
-                <div class="resultado" id="lblProvincia"> - - - </div>
+            <div class="ingresoDatos">
+                <div class="areaResultado">
+                    <div class="resultado" id="lblValidacion"> - - -</div>
+                    <div class="resultado" id="lblProvincia"> - - - </div>
+                    <div class="resultado" id="lblVechiculo"> - - - </div>
+                </div>
             </div>
         </div>
     </div>
