--- a/Roles/roles.html
+++ b/Roles/roles.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="roles.css" />
 </head>
 
-<body onload="mostrarOpcionEmpleado();">
+<body onload="mostrarOpcionEmpleado(); deshabilitar();">
     <div class="menu">
         <div class="contenedorBoton">
             <input type="button" value="EMPLEADO" class="estiloBoton" onclick="mostrarOpcionEmpleado();" />
@@ -76,7 +76,7 @@
                 </div>
                 <div class="botones">
                     <div class="contenedorBoton">
-                        <input type="button" value="NUEVO" class="estiloBoton"  />
+                        <input type="button" value="NUEVO" class="estiloBoton" onclick="ejecutarNuevo();"  />
                     </div>
                     <div class="contenedorBoton">
                         <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardar" />
